docs/pages/versions/v56.0.0/sdk/ui/swift-ui/zstack.mdx
---
title: ZStack
description: 用于重叠布局的 SwiftUI ZStack 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI ZStack 与官方 SwiftUI [ZStack API](https://developer.apple.com/documentation/swiftui/zstack) 保持一致，并将其子元素叠放在彼此之上。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/zstack/ios-light.webp"
  darkSrc="/static/images/expo-ui/zstack/ios-dark.webp"
  alt="沿 z 轴带有对角偏移的三个彩色圆角正方形，叠放在一个 ZStack 中"
/>

## 安装

<APIInstallSection />

## 用法

### 基本重叠堆栈

```tsx BasicZStackExample.tsx
import { Host, ZStack, Rectangle, Text } from '@expo/ui/swift-ui';
import { frame, foregroundStyle } from '@expo/ui/swift-ui/modifiers';

export default function BasicZStackExample() {
  return (
    <Host matchContents>
      <ZStack>
        <Rectangle modifiers={[frame({ width: 100, height: 100 })]} />
        <Text modifiers={[foregroundStyle({ color: 'white' })]}>Overlay</Text>
      </ZStack>
    </Host>
  );
}
```

### 带对齐方式

`alignment` 属性控制子元素在堆栈中的位置。可用选项包括：`center`、`leading`、`trailing`、`top`、`bottom`、`topLeading`、`topTrailing`、`bottomLeading` 和 `bottomTrailing`。

```tsx ZStackAlignmentExample.tsx
import { Host, ZStack, Rectangle, Circle } from '@expo/ui/swift-ui';
import { frame, foregroundStyle } from '@expo/ui/swift-ui/modifiers';

export default function ZStackAlignmentExample() {
  return (
    <Host matchContents>
      <ZStack alignment="bottomTrailing">
        <Rectangle
          modifiers={[frame({ width: 100, height: 100 }), foregroundStyle({ color: 'blue' })]}
        />
        <Circle modifiers={[frame({ width: 30, height: 30 }), foregroundStyle({ color: 'red' })]} />
      </ZStack>
    </Host>
  );
}
```

### 创建徽章覆盖层

```tsx ZStackBadgeExample.tsx
import { Host, ZStack, Circle, Text, Image } from '@expo/ui/swift-ui';
import { frame, foregroundStyle } from '@expo/ui/swift-ui/modifiers';

export default function ZStackBadgeExample() {
  return (
    <Host matchContents>
      <ZStack alignment="topTrailing">
        <Image systemName="bell.fill" size={32} color="blue" />
        <Circle modifiers={[frame({ width: 16, height: 16 }), foregroundStyle({ color: 'red' })]} />
      </ZStack>
    </Host>
  );
}
```

## API

```tsx
import { ZStack } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/zstack" apiName="ZStack" />
